[gd_scene load_steps=9 format=3 uid="uid://caxxpv5458ep6"]

[ext_resource type="Script" path="res://Enemies/EnemyDead.gd" id="1_631ca"]
[ext_resource type="PackedScene" uid="uid://ccge1mj74ori5" path="res://Enemies/Warrior/ArcherModel.tscn" id="2_2n17o"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_on6sn"]
height = 1.0
radius = 1.5

[sub_resource type="Curve" id="Curve_cnyl0"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_h8qft"]
curve = SubResource("Curve_cnyl0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_j3ec4"]
gravity = Vector3(0, 10, 0)
scale_curve = SubResource("CurveTexture_h8qft")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5it7s"]
blend_mode = 1
cull_mode = 2
emission_enabled = true
emission = Color(1, 1, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_g5688"]
material = SubResource("StandardMaterial3D_5it7s")

[node name="ArcherDead" type="Area3D"]
script = ExtResource("1_631ca")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
shape = SubResource("CylinderShape3D_on6sn")

[node name="Model" parent="." instance=ExtResource("2_2n17o")]

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.5, 0)
process_material = SubResource("ParticleProcessMaterial_j3ec4")
draw_pass_1 = SubResource("SphereMesh_g5688")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
