[gd_scene load_steps=9 format=3 uid="uid://dlwvsfg1kpaqc"]

[ext_resource type="Script" path="res://Enemies/EnemyDead.gd" id="1_0mgvt"]
[ext_resource type="PackedScene" uid="uid://bq87ddhyaw8bm" path="res://Enemies/Mage/MageModel.tscn" id="2_77vv5"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1eq0c"]
height = 1.0
radius = 1.5

[sub_resource type="Curve" id="Curve_ehwi1"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_h15rk"]
curve = SubResource("Curve_ehwi1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wlpvc"]
gravity = Vector3(0, 10, 0)
scale_curve = SubResource("CurveTexture_h15rk")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dug6p"]
blend_mode = 1
cull_mode = 2
emission_enabled = true
emission = Color(1, 1, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_af3pi"]
material = SubResource("StandardMaterial3D_dug6p")

[node name="MageDead" type="Area3D"]
script = ExtResource("1_0mgvt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
shape = SubResource("CylinderShape3D_1eq0c")

[node name="Model" parent="." instance=ExtResource("2_77vv5")]

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.5, 0)
process_material = SubResource("ParticleProcessMaterial_wlpvc")
draw_pass_1 = SubResource("SphereMesh_af3pi")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
