[gd_scene load_steps=7 format=3 uid="uid://cwh8dn3x207ls"]

[ext_resource type="Script" path="res://Enemies/EnemyDead.gd" id="1_p6fkc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pvnbs"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_o7p1a"]
material = SubResource("StandardMaterial3D_pvnbs")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fi0ge"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_dvb6q"]
material = SubResource("StandardMaterial3D_fi0ge")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_win2n"]
height = 1.0
radius = 1.5

[node name="WarriorDead" type="Area3D"]
script = ExtResource("1_p6fkc")

[node name="Model" type="Node3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Model"]
mesh = SubResource("BoxMesh_o7p1a")
skeleton = NodePath("../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Model/MeshInstance3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, -0.5)
mesh = SubResource("BoxMesh_dvb6q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
shape = SubResource("CylinderShape3D_win2n")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
